--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
   - redis-server
 
 env:
-  - DJANGO=1.6.7 PSYCOPG2=2.5.4 MYSQL=1.2.5 DJANGO_REDIS=3.7.1
+  - DJANGO=1.6.7 PSYCOPG2=2.5.4 MYSQL-PYTHON=1.2.5 DJANGO_REDIS=3.7.1
 
 install:
   - pip install Django==$DJANGO psycopg2==$PSYCOPG2 django-redis==$DJANGO_REDIS
@@ -20,7 +20,7 @@ install:
       pip install
         -e git+https://github.com/clelland/MySQL-for-Python-3#egg=MySQL-python;
     else
-      pip install MySQL-python==$MYSQL;
+      pip install MySQL-python==$MYSQL-PYTHON;
     fi
 
 before_script:
