--- a/.travis.yml
+++ b/.travis.yml
@@ -11,18 +11,19 @@ services:
   - redis-server
 
 env:
-  - DJANGO=1.6.7 PSYCOPG2=2.5.4 MYSQL_PYTHON=1.2.5 DJANGO_REDIS=3.7.1
-  - DJANGO=1.7 PSYCOPG2=2.5.4 MYSQL_PYTHON=1.2.5 DJANGO_REDIS=3.7.1
+  - DJANGO=1.6.7
+  - DJANGO=1.7
 
 install:
-  - pip install Django==$DJANGO psycopg2==$PSYCOPG2 django-redis==$DJANGO_REDIS
+  - pip install Django==$DJANGO psycopg2 django-redis
                 coveralls
   - if [[ $TRAVIS_PYTHON_VERSION == 3* ]];
     then
       pip install
+        python3-memcached
         -e git+https://github.com/clelland/MySQL-for-Python-3#egg=MySQL-python;
     else
-      pip install MySQL-python==$MYSQL_PYTHON unittest2;
+      pip install python-memcached MySQL-python unittest2;
     fi
 
 before_script:
