Revert "[Travis CI] Removes database creation."
This reverts commit 5d8c5d5785fbb94dcd8d9903cae5f33b06b6f6ec.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,8 @@ install:
 
 before_script:
   - psql -c 'CREATE USER cachalot CREATEDB;' -U postgres
+  - psql -c 'CREATE DATABASE cachalot OWNER cachalot;' -U postgres
+  - mysql -u root -e 'CREATE DATABASE cachalot;'
 
 script:
   # Run against all database and cache backends, accumulating coverage stats.
