--- a/.travis.yml
+++ b/.travis.yml
@@ -1,58 +1,16 @@
 language: python
 
-python:
-  - 2.6
-  - 2.7
-  - 3.2
-  - 3.3
-  - 3.4
-
 services:
   - memcached
   - redis-server
 
-env:
-  - DJANGO=1.6.8
-  - DJANGO=1.7.1
-
-install:
-  - pip install Django==$DJANGO psycopg2 django-redis South
-                coveralls
-  - if [[ $TRAVIS_PYTHON_VERSION == 3* ]];
-    then
-      pip install
-        python3-memcached
-        -e git+https://github.com/clelland/MySQL-for-Python-3#egg=MySQL-python;
-    else
-      pip install python-memcached MySQL-python unittest2;
-    fi
+install: pip install tox coveralls
 
 before_script:
   - psql -c 'CREATE USER cachalot CREATEDB;' -U postgres
   - psql -c 'CREATE DATABASE cachalot OWNER cachalot;' -U postgres
   - mysql -u root -e 'CREATE DATABASE cachalot;'
 
-script:
-  # Run against all database and cache backends, accumulating coverage stats.
-  - coverage run --source=cachalot ./runtests.py
-  - CACHE_BACKEND=redis coverage run --source=cachalot ./runtests.py
-  - CACHE_BACKEND=memcached coverage run --source=cachalot ./runtests.py
-  - DB_ENGINE=postgresql coverage run --source=cachalot ./runtests.py
-  - DB_ENGINE=postgresql CACHE_BACKEND=redis
-    coverage run --source=cachalot ./runtests.py
-  - DB_ENGINE=postgresql CACHE_BACKEND=memcached
-    coverage run --source=cachalot ./runtests.py
-  - DB_ENGINE=mysql coverage run --source=cachalot ./runtests.py
-  - DB_ENGINE=mysql CACHE_BACKEND=redis
-    coverage run --source=cachalot ./runtests.py
-  - DB_ENGINE=mysql CACHE_BACKEND=memcached
-    coverage run --source=cachalot ./runtests.py
+script: tox
 
-after_success:
-  - coveralls
-
-matrix:
-  exclude:
-    # Django 1.7 is not compatible with Python 2.6
-    - python: 2.6
-      env: DJANGO=1.7.1
+after_success: coveralls
