--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,10 @@ deps =
     South
     psycopg2
     django-redis
-    py2.7: python-memcached
-    py2.7: MySQL-python
-    py3.4: python3-memcached
-    py3.4: https://github.com/clelland/MySQL-for-Python-3/tarball/master
+    py{2.6,2.7}: python-memcached
+    py{2.6,2.7}: MySQL-python
+    py{3.2,3.3,3.4}: python3-memcached
+    py{3.2,3.3,3.4}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
 setenv =
     sqlite3: DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
@@ -28,4 +28,5 @@ setenv =
     locmem: CACHE_BACKEND=locmem
     redis: CACHE_BACKEND=redis
     memcached: CACHE_BACKEND=memcached
-commands = coverage run --source=cachalot ./runtests.py
+commands =
+    coverage run -a --source=cachalot ./runtests.py
