--- a/tox.ini
+++ b/tox.ini
@@ -17,16 +17,17 @@ deps =
     South
     psycopg2
     django-redis
-    py{2.6,2.7}: python-memcached
-    py{2.6,2.7}: MySQL-python
+    py2.6:           unittest2
+    py{2.6,2.7}:     python-memcached
+    py{2.6,2.7}:     MySQL-python
     py{3.2,3.3,3.4}: python3-memcached
     py{3.2,3.3,3.4}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
 setenv =
-    sqlite3: DB_ENGINE=sqlite3
+    sqlite3:    DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
-    mysql: DB_ENGINE=mysql
-    locmem: CACHE_BACKEND=locmem
-    redis: CACHE_BACKEND=redis
-    memcached: CACHE_BACKEND=memcached
+    mysql:      DB_ENGINE=mysql
+    locmem:     CACHE_BACKEND=locmem
+    redis:      CACHE_BACKEND=redis
+    memcached:  CACHE_BACKEND=memcached
 commands =
     coverage run -a --source=cachalot ./runtests.py
