Factorizes some Travis CI tests to avoid rebuilding envs all the time.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,87 +5,21 @@ services:
   - redis-server
 
 env:
-    - TOXENV=py2.6-django1.6-sqlite3-locmem
-    - TOXENV=py2.6-django1.6-sqlite3-redis
-    - TOXENV=py2.6-django1.6-sqlite3-memcached
-    - TOXENV=py2.6-django1.6-postgresql-locmem
-    - TOXENV=py2.6-django1.6-postgresql-redis
-    - TOXENV=py2.6-django1.6-postgresql-memcached
-    - TOXENV=py2.6-django1.6-mysql-locmem
-    - TOXENV=py2.6-django1.6-mysql-redis
-    - TOXENV=py2.6-django1.6-mysql-memcached
-    - TOXENV=py2.7-django1.6-sqlite3-locmem
-    - TOXENV=py2.7-django1.6-sqlite3-redis
-    - TOXENV=py2.7-django1.6-sqlite3-memcached
-    - TOXENV=py2.7-django1.6-postgresql-locmem
-    - TOXENV=py2.7-django1.6-postgresql-redis
-    - TOXENV=py2.7-django1.6-postgresql-memcached
-    - TOXENV=py2.7-django1.6-mysql-locmem
-    - TOXENV=py2.7-django1.6-mysql-redis
-    - TOXENV=py2.7-django1.6-mysql-memcached
-    - TOXENV=py2.7-django1.7-sqlite3-locmem
-    - TOXENV=py2.7-django1.7-sqlite3-redis
-    - TOXENV=py2.7-django1.7-sqlite3-memcached
-    - TOXENV=py2.7-django1.7-postgresql-locmem
-    - TOXENV=py2.7-django1.7-postgresql-redis
-    - TOXENV=py2.7-django1.7-postgresql-memcached
-    - TOXENV=py2.7-django1.7-mysql-locmem
-    - TOXENV=py2.7-django1.7-mysql-redis
-    - TOXENV=py2.7-django1.7-mysql-memcached
-    - TOXENV=py3.2-django1.6-sqlite3-locmem
-    - TOXENV=py3.2-django1.6-sqlite3-redis
-    - TOXENV=py3.2-django1.6-sqlite3-memcached
-    - TOXENV=py3.2-django1.6-postgresql-locmem
-    - TOXENV=py3.2-django1.6-postgresql-redis
-    - TOXENV=py3.2-django1.6-postgresql-memcached
-    - TOXENV=py3.2-django1.6-mysql-locmem
-    - TOXENV=py3.2-django1.6-mysql-redis
-    - TOXENV=py3.2-django1.6-mysql-memcached
-    - TOXENV=py3.2-django1.7-sqlite3-locmem
-    - TOXENV=py3.2-django1.7-sqlite3-redis
-    - TOXENV=py3.2-django1.7-sqlite3-memcached
-    - TOXENV=py3.2-django1.7-postgresql-locmem
-    - TOXENV=py3.2-django1.7-postgresql-redis
-    - TOXENV=py3.2-django1.7-postgresql-memcached
-    - TOXENV=py3.2-django1.7-mysql-locmem
-    - TOXENV=py3.2-django1.7-mysql-redis
-    - TOXENV=py3.2-django1.7-mysql-memcached
-    - TOXENV=py3.3-django1.6-sqlite3-locmem
-    - TOXENV=py3.3-django1.6-sqlite3-redis
-    - TOXENV=py3.3-django1.6-sqlite3-memcached
-    - TOXENV=py3.3-django1.6-postgresql-locmem
-    - TOXENV=py3.3-django1.6-postgresql-redis
-    - TOXENV=py3.3-django1.6-postgresql-memcached
-    - TOXENV=py3.3-django1.6-mysql-locmem
-    - TOXENV=py3.3-django1.6-mysql-redis
-    - TOXENV=py3.3-django1.6-mysql-memcached
-    - TOXENV=py3.3-django1.7-sqlite3-locmem
-    - TOXENV=py3.3-django1.7-sqlite3-redis
-    - TOXENV=py3.3-django1.7-sqlite3-memcached
-    - TOXENV=py3.3-django1.7-postgresql-locmem
-    - TOXENV=py3.3-django1.7-postgresql-redis
-    - TOXENV=py3.3-django1.7-postgresql-memcached
-    - TOXENV=py3.3-django1.7-mysql-locmem
-    - TOXENV=py3.3-django1.7-mysql-redis
-    - TOXENV=py3.3-django1.7-mysql-memcached
-    - TOXENV=py3.4-django1.6-sqlite3-locmem
-    - TOXENV=py3.4-django1.6-sqlite3-redis
-    - TOXENV=py3.4-django1.6-sqlite3-memcached
-    - TOXENV=py3.4-django1.6-postgresql-locmem
-    - TOXENV=py3.4-django1.6-postgresql-redis
-    - TOXENV=py3.4-django1.6-postgresql-memcached
-    - TOXENV=py3.4-django1.6-mysql-locmem
-    - TOXENV=py3.4-django1.6-mysql-redis
-    - TOXENV=py3.4-django1.6-mysql-memcached
-    - TOXENV=py3.4-django1.7-sqlite3-locmem
-    - TOXENV=py3.4-django1.7-sqlite3-redis
-    - TOXENV=py3.4-django1.7-sqlite3-memcached
-    - TOXENV=py3.4-django1.7-postgresql-locmem
-    - TOXENV=py3.4-django1.7-postgresql-redis
-    - TOXENV=py3.4-django1.7-postgresql-memcached
-    - TOXENV=py3.4-django1.7-mysql-locmem
-    - TOXENV=py3.4-django1.7-mysql-redis
-    - TOXENV=py3.4-django1.7-mysql-memcached
+    - TOXENV=py2.6-django1.6-sqlite3-{locmem,redis,memcached}
+    - TOXENV=py2.6-django1.6-postgresql-{locmem,redis,memcached}
+    - TOXENV=py2.6-django1.6-mysql-{locmem,redis,memcached}
+    - TOXENV=py2.7-django1.6-sqlite3-{locmem,redis,memcached}
+    - TOXENV=py2.7-django1.6-postgresql-{locmem,redis,memcached}
+    - TOXENV=py2.7-django1.6-mysql-{locmem,redis,memcached}
+    - TOXENV=py2.7-django1.7-sqlite3-{locmem,redis,memcached}
+    - TOXENV=py2.7-django1.7-postgresql-{locmem,redis,memcached}
+    - TOXENV=py2.7-django1.7-mysql-{locmem,redis,memcached}
+    - TOXENV=py{3.2,3.3,3.4}-django1.6-sqlite3-{locmem,redis,memcached}
+    - TOXENV=py{3.2,3.3,3.4}-django1.6-postgresql-{locmem,redis,memcached}
+    - TOXENV=py{3.2,3.3,3.4}-django1.6-mysql-{locmem,redis,memcached}
+    - TOXENV=py{3.2,3.3,3.4}-django1.7-sqlite3-{locmem,redis,memcached}
+    - TOXENV=py{3.2,3.3,3.4}-django1.7-postgresql-{locmem,redis,memcached}
+    - TOXENV=py{3.2,3.3,3.4}-django1.7-mysql-{locmem,redis,memcached}
 
 install: pip install tox coveralls
 
