--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
-    py{2.7,3.2,3.3,3.4}-django{1.6,1.7}-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
+    py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,filebased,redis,memcached},
+    py{2.7,3.2,3.3,3.4}-django{1.6,1.7}-{sqlite3,postgresql,mysql}-{locmem,filebased,redis,memcached},
 
 [testenv]
 basepython =
@@ -18,15 +18,16 @@ deps =
     psycopg2
     django-redis
     py2.6:           unittest2
-    py{2.6,2.7}:     python-memcached
     py{2.6,2.7}:     MySQL-python
-    py{3.2,3.3,3.4}: python3-memcached
+    py{2.6,2.7}:     python-memcached
     py{3.2,3.3,3.4}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
+    py{3.2,3.3,3.4}: python3-memcached
 setenv =
     sqlite3:    DB_ENGINE=sqlite3
     postgresql: DB_ENGINE=postgresql
     mysql:      DB_ENGINE=mysql
     locmem:     CACHE_BACKEND=locmem
+    filebased:  CACHE_BACKEND=filebased
     redis:      CACHE_BACKEND=redis
     memcached:  CACHE_BACKEND=memcached
 commands =
