Removes file-based cache support for Django 1.6.

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist =
-    py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,filebased,redis,memcached},
-    py{2.7,3.2,3.3,3.4}-django{1.6,1.7}-{sqlite3,postgresql,mysql}-{locmem,filebased,redis,memcached},
+    py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
+    py{2.7,3.2,3.3,3.4}-django1.7-{sqlite3,postgresql,mysql}-filebased,
+    py{2.7,3.2,3.3,3.4}-django{1.6,1.7}-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
 
 [testenv]
 basepython =
