--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,99 @@ services:
   - redis-server
 
 env:
-    - TOXENV=py2.6-django1.6
-    - TOXENV=py2.7-django1.6
-    - TOXENV=py2.7-django1.7
-    - TOXENV=py3.2-django1.6
-    - TOXENV=py3.2-django1.7
-    - TOXENV=py3.3-django1.6
-    - TOXENV=py3.3-django1.7
-    - TOXENV=py3.4-django1.6
-    - TOXENV=py3.4-django1.7
+    - TOXENV=py2.6-django1.6-sqlite3-locmem
+    - TOXENV=py2.6-django1.6-sqlite3-redis
+    - TOXENV=py2.6-django1.6-sqlite3-memcached
+    - TOXENV=py2.6-django1.6-postgresql-locmem
+    - TOXENV=py2.6-django1.6-postgresql-redis
+    - TOXENV=py2.6-django1.6-postgresql-memcached
+    - TOXENV=py2.6-django1.6-mysql-locmem
+    - TOXENV=py2.6-django1.6-mysql-redis
+    - TOXENV=py2.6-django1.6-mysql-memcached
+    - TOXENV=py2.7-django1.7-sqlite3-filebased
+    - TOXENV=py2.7-django1.7-postgresql-filebased
+    - TOXENV=py2.7-django1.7-mysql-filebased
+    - TOXENV=py3.2-django1.7-sqlite3-filebased
+    - TOXENV=py3.2-django1.7-postgresql-filebased
+    - TOXENV=py3.2-django1.7-mysql-filebased
+    - TOXENV=py3.3-django1.7-sqlite3-filebased
+    - TOXENV=py3.3-django1.7-postgresql-filebased
+    - TOXENV=py3.3-django1.7-mysql-filebased
+    - TOXENV=py3.4-django1.7-sqlite3-filebased
+    - TOXENV=py3.4-django1.7-postgresql-filebased
+    - TOXENV=py3.4-django1.7-mysql-filebased
+    - TOXENV=py2.7-django1.6-sqlite3-locmem
+    - TOXENV=py2.7-django1.6-sqlite3-redis
+    - TOXENV=py2.7-django1.6-sqlite3-memcached
+    - TOXENV=py2.7-django1.6-postgresql-locmem
+    - TOXENV=py2.7-django1.6-postgresql-redis
+    - TOXENV=py2.7-django1.6-postgresql-memcached
+    - TOXENV=py2.7-django1.6-mysql-locmem
+    - TOXENV=py2.7-django1.6-mysql-redis
+    - TOXENV=py2.7-django1.6-mysql-memcached
+    - TOXENV=py2.7-django1.7-sqlite3-locmem
+    - TOXENV=py2.7-django1.7-sqlite3-redis
+    - TOXENV=py2.7-django1.7-sqlite3-memcached
+    - TOXENV=py2.7-django1.7-postgresql-locmem
+    - TOXENV=py2.7-django1.7-postgresql-redis
+    - TOXENV=py2.7-django1.7-postgresql-memcached
+    - TOXENV=py2.7-django1.7-mysql-locmem
+    - TOXENV=py2.7-django1.7-mysql-redis
+    - TOXENV=py2.7-django1.7-mysql-memcached
+    - TOXENV=py3.2-django1.6-sqlite3-locmem
+    - TOXENV=py3.2-django1.6-sqlite3-redis
+    - TOXENV=py3.2-django1.6-sqlite3-memcached
+    - TOXENV=py3.2-django1.6-postgresql-locmem
+    - TOXENV=py3.2-django1.6-postgresql-redis
+    - TOXENV=py3.2-django1.6-postgresql-memcached
+    - TOXENV=py3.2-django1.6-mysql-locmem
+    - TOXENV=py3.2-django1.6-mysql-redis
+    - TOXENV=py3.2-django1.6-mysql-memcached
+    - TOXENV=py3.2-django1.7-sqlite3-locmem
+    - TOXENV=py3.2-django1.7-sqlite3-redis
+    - TOXENV=py3.2-django1.7-sqlite3-memcached
+    - TOXENV=py3.2-django1.7-postgresql-locmem
+    - TOXENV=py3.2-django1.7-postgresql-redis
+    - TOXENV=py3.2-django1.7-postgresql-memcached
+    - TOXENV=py3.2-django1.7-mysql-locmem
+    - TOXENV=py3.2-django1.7-mysql-redis
+    - TOXENV=py3.2-django1.7-mysql-memcached
+    - TOXENV=py3.3-django1.6-sqlite3-locmem
+    - TOXENV=py3.3-django1.6-sqlite3-redis
+    - TOXENV=py3.3-django1.6-sqlite3-memcached
+    - TOXENV=py3.3-django1.6-postgresql-locmem
+    - TOXENV=py3.3-django1.6-postgresql-redis
+    - TOXENV=py3.3-django1.6-postgresql-memcached
+    - TOXENV=py3.3-django1.6-mysql-locmem
+    - TOXENV=py3.3-django1.6-mysql-redis
+    - TOXENV=py3.3-django1.6-mysql-memcached
+    - TOXENV=py3.3-django1.7-sqlite3-locmem
+    - TOXENV=py3.3-django1.7-sqlite3-redis
+    - TOXENV=py3.3-django1.7-sqlite3-memcached
+    - TOXENV=py3.3-django1.7-postgresql-locmem
+    - TOXENV=py3.3-django1.7-postgresql-redis
+    - TOXENV=py3.3-django1.7-postgresql-memcached
+    - TOXENV=py3.3-django1.7-mysql-locmem
+    - TOXENV=py3.3-django1.7-mysql-redis
+    - TOXENV=py3.3-django1.7-mysql-memcached
+    - TOXENV=py3.4-django1.6-sqlite3-locmem
+    - TOXENV=py3.4-django1.6-sqlite3-redis
+    - TOXENV=py3.4-django1.6-sqlite3-memcached
+    - TOXENV=py3.4-django1.6-postgresql-locmem
+    - TOXENV=py3.4-django1.6-postgresql-redis
+    - TOXENV=py3.4-django1.6-postgresql-memcached
+    - TOXENV=py3.4-django1.6-mysql-locmem
+    - TOXENV=py3.4-django1.6-mysql-redis
+    - TOXENV=py3.4-django1.6-mysql-memcached
+    - TOXENV=py3.4-django1.7-sqlite3-locmem
+    - TOXENV=py3.4-django1.7-sqlite3-redis
+    - TOXENV=py3.4-django1.7-sqlite3-memcached
+    - TOXENV=py3.4-django1.7-postgresql-locmem
+    - TOXENV=py3.4-django1.7-postgresql-redis
+    - TOXENV=py3.4-django1.7-postgresql-memcached
+    - TOXENV=py3.4-django1.7-mysql-locmem
+    - TOXENV=py3.4-django1.7-mysql-redis
+    - TOXENV=py3.4-django1.7-mysql-memcached
 
 install: pip install tox coveralls
 
@@ -21,22 +105,8 @@ before_script:
     - psql -c 'CREATE USER cachalot CREATEDB;' -U postgres
     - psql -c 'CREATE DATABASE cachalot OWNER cachalot;' -U postgres
     - mysql -u root -e 'CREATE DATABASE cachalot;'
-    # Caches pip downloads
-    - mkdir ~/.pip
-    - printf '[global]\ndownload_cache = ~/.cache/pip\n' >> ~/.pip/pip.conf
 
 script:
-   - tox -e $TOXENV-sqlite3-locmem
-   - tox -e $TOXENV-sqlite3-filebased
-   - tox -e $TOXENV-sqlite3-redis
-   - tox -e $TOXENV-sqlite3-memcached
-   - tox -e $TOXENV-postgresql-locmem
-   - tox -e $TOXENV-postgresql-filebased
-   - tox -e $TOXENV-postgresql-redis
-   - tox -e $TOXENV-postgresql-memcached
-   - tox -e $TOXENV-mysql-locmem
-   - tox -e $TOXENV-mysql-filebased
-   - tox -e $TOXENV-mysql-redis
-   - tox -e $TOXENV-mysql-memcached
+   - tox -e $TOXENV
 
 after_success: coveralls
