--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
-    py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
+    py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,redis,memcached,pylibmc},
+    py2.7-django{1.6,1.7}-{sqlite3,postgresql,mysql}-pylibmc,
     py{2.7,3.2,3.3,3.4}-django1.7-{sqlite3,postgresql,mysql}-filebased,
     py{2.7,3.2,3.3,3.4}-django{1.6,1.7}-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
 
@@ -21,6 +22,7 @@ deps =
     py2.6:           unittest2
     py{2.6,2.7}:     MySQL-python
     py{2.6,2.7}:     python-memcached
+    py{2.6,2.7}:     pylibmc
     py{3.2,3.3,3.4}: https://github.com/clelland/MySQL-for-Python-3/tarball/master
     py{3.2,3.3,3.4}: python3-memcached
 setenv =
@@ -31,5 +33,6 @@ setenv =
     filebased:  CACHE_BACKEND=filebased
     redis:      CACHE_BACKEND=redis
     memcached:  CACHE_BACKEND=memcached
+    pylibmc:    CACHE_BACKEND=pylibmc
 commands =
     coverage run -a --source=cachalot ./runtests.py
