--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include README.rst LICENSE AUTHORS.rst CHANGELOG.rst requirements.txt
-recursive-include *.json *.html
+recursive-include cachalot *.json *.html
