Use the new build env on Travis
dedicated cpus, more ram, better boot times, improved networking

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,99 +5,101 @@ services:
   - redis-server
 
 env:
-    - TOXENV=py2.6-django1.6-sqlite3-locmem
-    - TOXENV=py2.6-django1.6-sqlite3-redis
-    - TOXENV=py2.6-django1.6-sqlite3-memcached
-    - TOXENV=py2.6-django1.6-postgresql-locmem
-    - TOXENV=py2.6-django1.6-postgresql-redis
-    - TOXENV=py2.6-django1.6-postgresql-memcached
-    - TOXENV=py2.6-django1.6-mysql-locmem
-    - TOXENV=py2.6-django1.6-mysql-redis
-    - TOXENV=py2.6-django1.6-mysql-memcached
-    - TOXENV=py2.7-django1.7-sqlite3-filebased
-    - TOXENV=py2.7-django1.7-postgresql-filebased
-    - TOXENV=py2.7-django1.7-mysql-filebased
-    - TOXENV=py3.2-django1.7-sqlite3-filebased
-    - TOXENV=py3.2-django1.7-postgresql-filebased
-    - TOXENV=py3.2-django1.7-mysql-filebased
-    - TOXENV=py3.3-django1.7-sqlite3-filebased
-    - TOXENV=py3.3-django1.7-postgresql-filebased
-    - TOXENV=py3.3-django1.7-mysql-filebased
-    - TOXENV=py3.4-django1.7-sqlite3-filebased
-    - TOXENV=py3.4-django1.7-postgresql-filebased
-    - TOXENV=py3.4-django1.7-mysql-filebased
-    - TOXENV=py2.7-django1.6-sqlite3-locmem
-    - TOXENV=py2.7-django1.6-sqlite3-redis
-    - TOXENV=py2.7-django1.6-sqlite3-memcached
-    - TOXENV=py2.7-django1.6-postgresql-locmem
-    - TOXENV=py2.7-django1.6-postgresql-redis
-    - TOXENV=py2.7-django1.6-postgresql-memcached
-    - TOXENV=py2.7-django1.6-mysql-locmem
-    - TOXENV=py2.7-django1.6-mysql-redis
-    - TOXENV=py2.7-django1.6-mysql-memcached
-    - TOXENV=py2.7-django1.7-sqlite3-locmem
-    - TOXENV=py2.7-django1.7-sqlite3-redis
-    - TOXENV=py2.7-django1.7-sqlite3-memcached
-    - TOXENV=py2.7-django1.7-postgresql-locmem
-    - TOXENV=py2.7-django1.7-postgresql-redis
-    - TOXENV=py2.7-django1.7-postgresql-memcached
-    - TOXENV=py2.7-django1.7-mysql-locmem
-    - TOXENV=py2.7-django1.7-mysql-redis
-    - TOXENV=py2.7-django1.7-mysql-memcached
-    - TOXENV=py3.2-django1.6-sqlite3-locmem
-    - TOXENV=py3.2-django1.6-sqlite3-redis
-    - TOXENV=py3.2-django1.6-sqlite3-memcached
-    - TOXENV=py3.2-django1.6-postgresql-locmem
-    - TOXENV=py3.2-django1.6-postgresql-redis
-    - TOXENV=py3.2-django1.6-postgresql-memcached
-    - TOXENV=py3.2-django1.6-mysql-locmem
-    - TOXENV=py3.2-django1.6-mysql-redis
-    - TOXENV=py3.2-django1.6-mysql-memcached
-    - TOXENV=py3.2-django1.7-sqlite3-locmem
-    - TOXENV=py3.2-django1.7-sqlite3-redis
-    - TOXENV=py3.2-django1.7-sqlite3-memcached
-    - TOXENV=py3.2-django1.7-postgresql-locmem
-    - TOXENV=py3.2-django1.7-postgresql-redis
-    - TOXENV=py3.2-django1.7-postgresql-memcached
-    - TOXENV=py3.2-django1.7-mysql-locmem
-    - TOXENV=py3.2-django1.7-mysql-redis
-    - TOXENV=py3.2-django1.7-mysql-memcached
-    - TOXENV=py3.3-django1.6-sqlite3-locmem
-    - TOXENV=py3.3-django1.6-sqlite3-redis
-    - TOXENV=py3.3-django1.6-sqlite3-memcached
-    - TOXENV=py3.3-django1.6-postgresql-locmem
-    - TOXENV=py3.3-django1.6-postgresql-redis
-    - TOXENV=py3.3-django1.6-postgresql-memcached
-    - TOXENV=py3.3-django1.6-mysql-locmem
-    - TOXENV=py3.3-django1.6-mysql-redis
-    - TOXENV=py3.3-django1.6-mysql-memcached
-    - TOXENV=py3.3-django1.7-sqlite3-locmem
-    - TOXENV=py3.3-django1.7-sqlite3-redis
-    - TOXENV=py3.3-django1.7-sqlite3-memcached
-    - TOXENV=py3.3-django1.7-postgresql-locmem
-    - TOXENV=py3.3-django1.7-postgresql-redis
-    - TOXENV=py3.3-django1.7-postgresql-memcached
-    - TOXENV=py3.3-django1.7-mysql-locmem
-    - TOXENV=py3.3-django1.7-mysql-redis
-    - TOXENV=py3.3-django1.7-mysql-memcached
-    - TOXENV=py3.4-django1.6-sqlite3-locmem
-    - TOXENV=py3.4-django1.6-sqlite3-redis
-    - TOXENV=py3.4-django1.6-sqlite3-memcached
-    - TOXENV=py3.4-django1.6-postgresql-locmem
-    - TOXENV=py3.4-django1.6-postgresql-redis
-    - TOXENV=py3.4-django1.6-postgresql-memcached
-    - TOXENV=py3.4-django1.6-mysql-locmem
-    - TOXENV=py3.4-django1.6-mysql-redis
-    - TOXENV=py3.4-django1.6-mysql-memcached
-    - TOXENV=py3.4-django1.7-sqlite3-locmem
-    - TOXENV=py3.4-django1.7-sqlite3-redis
-    - TOXENV=py3.4-django1.7-sqlite3-memcached
-    - TOXENV=py3.4-django1.7-postgresql-locmem
-    - TOXENV=py3.4-django1.7-postgresql-redis
-    - TOXENV=py3.4-django1.7-postgresql-memcached
-    - TOXENV=py3.4-django1.7-mysql-locmem
-    - TOXENV=py3.4-django1.7-mysql-redis
-    - TOXENV=py3.4-django1.7-mysql-memcached
+  - TOXENV=py2.6-django1.6-sqlite3-locmem
+  - TOXENV=py2.6-django1.6-sqlite3-redis
+  - TOXENV=py2.6-django1.6-sqlite3-memcached
+  - TOXENV=py2.6-django1.6-postgresql-locmem
+  - TOXENV=py2.6-django1.6-postgresql-redis
+  - TOXENV=py2.6-django1.6-postgresql-memcached
+  - TOXENV=py2.6-django1.6-mysql-locmem
+  - TOXENV=py2.6-django1.6-mysql-redis
+  - TOXENV=py2.6-django1.6-mysql-memcached
+  - TOXENV=py2.7-django1.7-sqlite3-filebased
+  - TOXENV=py2.7-django1.7-postgresql-filebased
+  - TOXENV=py2.7-django1.7-mysql-filebased
+  - TOXENV=py3.2-django1.7-sqlite3-filebased
+  - TOXENV=py3.2-django1.7-postgresql-filebased
+  - TOXENV=py3.2-django1.7-mysql-filebased
+  - TOXENV=py3.3-django1.7-sqlite3-filebased
+  - TOXENV=py3.3-django1.7-postgresql-filebased
+  - TOXENV=py3.3-django1.7-mysql-filebased
+  - TOXENV=py3.4-django1.7-sqlite3-filebased
+  - TOXENV=py3.4-django1.7-postgresql-filebased
+  - TOXENV=py3.4-django1.7-mysql-filebased
+  - TOXENV=py2.7-django1.6-sqlite3-locmem
+  - TOXENV=py2.7-django1.6-sqlite3-redis
+  - TOXENV=py2.7-django1.6-sqlite3-memcached
+  - TOXENV=py2.7-django1.6-postgresql-locmem
+  - TOXENV=py2.7-django1.6-postgresql-redis
+  - TOXENV=py2.7-django1.6-postgresql-memcached
+  - TOXENV=py2.7-django1.6-mysql-locmem
+  - TOXENV=py2.7-django1.6-mysql-redis
+  - TOXENV=py2.7-django1.6-mysql-memcached
+  - TOXENV=py2.7-django1.7-sqlite3-locmem
+  - TOXENV=py2.7-django1.7-sqlite3-redis
+  - TOXENV=py2.7-django1.7-sqlite3-memcached
+  - TOXENV=py2.7-django1.7-postgresql-locmem
+  - TOXENV=py2.7-django1.7-postgresql-redis
+  - TOXENV=py2.7-django1.7-postgresql-memcached
+  - TOXENV=py2.7-django1.7-mysql-locmem
+  - TOXENV=py2.7-django1.7-mysql-redis
+  - TOXENV=py2.7-django1.7-mysql-memcached
+  - TOXENV=py3.2-django1.6-sqlite3-locmem
+  - TOXENV=py3.2-django1.6-sqlite3-redis
+  - TOXENV=py3.2-django1.6-sqlite3-memcached
+  - TOXENV=py3.2-django1.6-postgresql-locmem
+  - TOXENV=py3.2-django1.6-postgresql-redis
+  - TOXENV=py3.2-django1.6-postgresql-memcached
+  - TOXENV=py3.2-django1.6-mysql-locmem
+  - TOXENV=py3.2-django1.6-mysql-redis
+  - TOXENV=py3.2-django1.6-mysql-memcached
+  - TOXENV=py3.2-django1.7-sqlite3-locmem
+  - TOXENV=py3.2-django1.7-sqlite3-redis
+  - TOXENV=py3.2-django1.7-sqlite3-memcached
+  - TOXENV=py3.2-django1.7-postgresql-locmem
+  - TOXENV=py3.2-django1.7-postgresql-redis
+  - TOXENV=py3.2-django1.7-postgresql-memcached
+  - TOXENV=py3.2-django1.7-mysql-locmem
+  - TOXENV=py3.2-django1.7-mysql-redis
+  - TOXENV=py3.2-django1.7-mysql-memcached
+  - TOXENV=py3.3-django1.6-sqlite3-locmem
+  - TOXENV=py3.3-django1.6-sqlite3-redis
+  - TOXENV=py3.3-django1.6-sqlite3-memcached
+  - TOXENV=py3.3-django1.6-postgresql-locmem
+  - TOXENV=py3.3-django1.6-postgresql-redis
+  - TOXENV=py3.3-django1.6-postgresql-memcached
+  - TOXENV=py3.3-django1.6-mysql-locmem
+  - TOXENV=py3.3-django1.6-mysql-redis
+  - TOXENV=py3.3-django1.6-mysql-memcached
+  - TOXENV=py3.3-django1.7-sqlite3-locmem
+  - TOXENV=py3.3-django1.7-sqlite3-redis
+  - TOXENV=py3.3-django1.7-sqlite3-memcached
+  - TOXENV=py3.3-django1.7-postgresql-locmem
+  - TOXENV=py3.3-django1.7-postgresql-redis
+  - TOXENV=py3.3-django1.7-postgresql-memcached
+  - TOXENV=py3.3-django1.7-mysql-locmem
+  - TOXENV=py3.3-django1.7-mysql-redis
+  - TOXENV=py3.3-django1.7-mysql-memcached
+  - TOXENV=py3.4-django1.6-sqlite3-locmem
+  - TOXENV=py3.4-django1.6-sqlite3-redis
+  - TOXENV=py3.4-django1.6-sqlite3-memcached
+  - TOXENV=py3.4-django1.6-postgresql-locmem
+  - TOXENV=py3.4-django1.6-postgresql-redis
+  - TOXENV=py3.4-django1.6-postgresql-memcached
+  - TOXENV=py3.4-django1.6-mysql-locmem
+  - TOXENV=py3.4-django1.6-mysql-redis
+  - TOXENV=py3.4-django1.6-mysql-memcached
+  - TOXENV=py3.4-django1.7-sqlite3-locmem
+  - TOXENV=py3.4-django1.7-sqlite3-redis
+  - TOXENV=py3.4-django1.7-sqlite3-memcached
+  - TOXENV=py3.4-django1.7-postgresql-locmem
+  - TOXENV=py3.4-django1.7-postgresql-redis
+  - TOXENV=py3.4-django1.7-postgresql-memcached
+  - TOXENV=py3.4-django1.7-mysql-locmem
+  - TOXENV=py3.4-django1.7-mysql-redis
+  - TOXENV=py3.4-django1.7-mysql-memcached
+
+sudo: false
 
 install: pip install tox coveralls
 
@@ -106,7 +108,6 @@ before_script:
     - psql -c 'CREATE DATABASE cachalot OWNER cachalot;' -U postgres
     - mysql -u root -e 'CREATE DATABASE cachalot;'
 
-script:
-   - tox -e $TOXENV
+script: tox -e $TOXENV
 
 after_success: coveralls
