[Travis CI] Adds pylibmc to the environment matrix.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,21 @@ env:
   - TOXENV=py2.6-django1.6-sqlite3-locmem
   - TOXENV=py2.6-django1.6-sqlite3-redis
   - TOXENV=py2.6-django1.6-sqlite3-memcached
+  - TOXENV=py2.6-django1.6-sqlite3-pylibmc
   - TOXENV=py2.6-django1.6-postgresql-locmem
   - TOXENV=py2.6-django1.6-postgresql-redis
   - TOXENV=py2.6-django1.6-postgresql-memcached
+  - TOXENV=py2.6-django1.6-postgresql-pylibmc
   - TOXENV=py2.6-django1.6-mysql-locmem
   - TOXENV=py2.6-django1.6-mysql-redis
   - TOXENV=py2.6-django1.6-mysql-memcached
+  - TOXENV=py2.6-django1.6-mysql-pylibmc
+  - TOXENV=py2.7-django1.6-sqlite3-pylibmc
+  - TOXENV=py2.7-django1.6-postgresql-pylibmc
+  - TOXENV=py2.7-django1.6-mysql-pylibmc
+  - TOXENV=py2.7-django1.7-sqlite3-pylibmc
+  - TOXENV=py2.7-django1.7-postgresql-pylibmc
+  - TOXENV=py2.7-django1.7-mysql-pylibmc
   - TOXENV=py2.7-django1.7-sqlite3-filebased
   - TOXENV=py2.7-django1.7-postgresql-filebased
   - TOXENV=py2.7-django1.7-mysql-filebased
