--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
-    py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,redis,memcached,pylibmc},
-    py2.7-django{1.6,1.7}-{sqlite3,postgresql,mysql}-pylibmc,
+    py2.6-django1.6-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
+    py2.7-django1.7-{sqlite3,postgresql,mysql}-pylibmc,
     py{2.7,3.2,3.3,3.4}-django1.7-{sqlite3,postgresql,mysql}-filebased,
     py{2.7,3.2,3.3,3.4}-django{1.6,1.7}-{sqlite3,postgresql,mysql}-{locmem,redis,memcached},
 
