Restores locmem support for Django 1.6.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,9 @@ before_script:
     - mysql -u root -e 'CREATE DATABASE cachalot;'
 
 script:
+  - CACHE_BACKEND=locmem    DB_ENGINE=sqlite3    coverage run -a --source=cachalot ./runtests.py
+  - CACHE_BACKEND=locmem    DB_ENGINE=postgresql coverage run -a --source=cachalot ./runtests.py
+  - CACHE_BACKEND=locmem    DB_ENGINE=mysql      coverage run -a --source=cachalot ./runtests.py
   - CACHE_BACKEND=redis     DB_ENGINE=sqlite3    coverage run -a --source=cachalot ./runtests.py
   - CACHE_BACKEND=redis     DB_ENGINE=postgresql coverage run -a --source=cachalot ./runtests.py
   - CACHE_BACKEND=redis     DB_ENGINE=mysql      coverage run -a --source=cachalot ./runtests.py
@@ -39,9 +42,6 @@ script:
   - CACHE_BACKEND=memcached DB_ENGINE=postgresql coverage run -a --source=cachalot ./runtests.py
   - CACHE_BACKEND=memcached DB_ENGINE=mysql      coverage run -a --source=cachalot ./runtests.py
   - if [[ $DJANGO == "Django>=1.7,<1.8" ]]; then
-    CACHE_BACKEND=locmem    DB_ENGINE=sqlite3    coverage run -a --source=cachalot ./runtests.py;
-    CACHE_BACKEND=locmem    DB_ENGINE=postgresql coverage run -a --source=cachalot ./runtests.py;
-    CACHE_BACKEND=locmem    DB_ENGINE=mysql      coverage run -a --source=cachalot ./runtests.py;
     CACHE_BACKEND=filebased DB_ENGINE=sqlite3    coverage run -a --source=cachalot ./runtests.py;
     CACHE_BACKEND=filebased DB_ENGINE=postgresql coverage run -a --source=cachalot ./runtests.py;
     CACHE_BACKEND=filebased DB_ENGINE=mysql      coverage run -a --source=cachalot ./runtests.py;
